# Chatbot-RAG-TrafficLaw-VietNam

./: .gitignore  README.md
backend/: .env  .gitignore  docker-compose.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 074b152b3915_initial_migration.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  chat.py  documents.py
backend/app/core/: config.py  life_cycles.py  security.py
backend/app/crud/: crud_chat.py  crud_user.py
backend/app/db/: base.py  session.py
backend/app/schemas/: chat.py  user.py
backend/app/services/: data_loader.py  rag_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx  protected-route.tsx
frontend/src/components/auth/: login-form.tsx  register-form.tsx
frontend/src/components/chat/: ChatGreeting.tsx  ChatHeader.tsx  ChatInput.tsx  ChatSessionManager.tsx  ChatSidebar.tsx  ChatTimeline.tsx  MessageItem.tsx  MessageList.tsx  UserProfile.tsx  chat-header.tsx  chat-input.tsx  chat-messages.tsx  chat-sidebar.tsx  history-item.tsx  models-selector.tsx  nav-main.tsx  nav-user.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/lib/: api.ts  types.tsx
frontend/src/pages/: Chat.tsx  Index.tsx  Login.tsx  NotFound.tsx  Register.tsx  Signup.tsx
frontend/src/types/: index.tsx
